rework tests