@@ -33,6 +33,7 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TaskServiceTest {
+
   @InjectMocks private TaskServiceImpl taskService;
 
   @Mock private TaskRepository taskRepository;
@@ -41,9 +42,9 @@ class TaskServiceTest {
 
   @Mock private TaskMapper taskMapper;
 
-  @Mock private UserMapper userMapper;
-
   @Mock private AuthUtil authUtil;
+
+  @Mock private UserMapper userMapper;
 
   private static Task task;
   private static TaskDto taskDto;
@@ -54,77 +55,52 @@ class TaskServiceTest {
 
   @BeforeAll
   public static void init() {
-    User creator = new User();
-    creator.setId(UUID.randomUUID());
-    creator.setEmail("admin@example.com");
+    User creator = createTestUser("admin@example.com");
+    User assignee = createTestUser("assignee@example.com");
 
-    User assignee = new User();
-    assignee.setId(UUID.randomUUID());
-    assignee.setEmail("assignee@example.com");
+    task = createTestTask(TASK_ID, creator, assignee);
+    taskDto = createTestTaskDto(TASK_ID, creator, assignee);
+    taskND = createTestTask(null, creator, assignee);
+    taskDtoND = createTestTaskDto(null, creator, assignee);
+  }
 
-    task =
-        Task.builder()
-            .id(TASK_ID)
-            .title("Test Task")
-            .description("Task description")
-            .status(TaskStatus.PENDING)
-            .priority(TaskPriority.MEDIUM)
-            .comments(Set.of("Comment 1"))
-            .creator(creator)
-            .assignee(assignee)
-            .build();
+  private static User createTestUser(String email) {
+    User user = new User();
+    user.setId(UUID.randomUUID());
+    user.setEmail(email);
+    return user;
+  }
 
-    taskDto =
-        TaskDto.builder()
-            .id(TASK_ID)
-            .title("Test Task")
-            .description("Task description")
-            .status(TaskStatus.PENDING.name())
-            .priority(TaskPriority.MEDIUM.name())
-            .comments(Set.of("Comment 1"))
-            .creator(new UserDto(creator.getId(), creator.getEmail(), "ADMIN"))
-            .assignee(new UserDto(assignee.getId(), assignee.getEmail(), "USER"))
-            .build();
+  private static Task createTestTask(UUID id, User creator, User assignee) {
+    return Task.builder()
+        .id(id)
+        .title("Test Task")
+        .description("Task description")
+        .status(TaskStatus.PENDING)
+        .priority(TaskPriority.MEDIUM)
+        .comments(Set.of("Comment 1"))
+        .creator(creator)
+        .assignee(assignee)
+        .build();
+  }
 
-    taskND =
-        Task.builder()
-            .title("Test Task")
-            .description("Task description")
-            .status(TaskStatus.PENDING)
-            .priority(TaskPriority.MEDIUM)
-            .comments(Set.of("Comment 1"))
-            .creator(creator)
-            .assignee(assignee)
-            .build();
-
-    taskDtoND =
-        TaskDto.builder()
-            .title("Test Task")
-            .description("Task description")
-            .status(TaskStatus.PENDING.name())
-            .priority(TaskPriority.MEDIUM.name())
-            .comments(Set.of("Comment 1"))
-            .creator(new UserDto(creator.getId(), creator.getEmail(), "ADMIN"))
-            .assignee(new UserDto(assignee.getId(), assignee.getEmail(), "USER"))
-            .build();
+  private static TaskDto createTestTaskDto(UUID id, User creator, User assignee) {
+    return TaskDto.builder()
+        .id(id)
+        .title("Test Task")
+        .description("Task description")
+        .status(TaskStatus.PENDING.name())
+        .priority(TaskPriority.MEDIUM.name())
+        .comments(Set.of("Comment 1"))
+        .creator(new UserDto(creator.getId(), creator.getEmail(), "ADMIN"))
+        .assignee(new UserDto(assignee.getId(), assignee.getEmail(), "USER"))
+        .build();
   }
 
   @Test
-  void TaskService_CreateTask_ReturnsTaskDto_WhenAdmin() {
-    when(authUtil.isAdmin()).thenReturn(true);
-
-    User creator = new User();
-    creator.setId(UUID.randomUUID());
-    creator.setEmail("admin@example.com");
-    when(userRepository.findByEmail(creator.getEmail())).thenReturn(Optional.of(creator));
-
-    User assignee = new User();
-    assignee.setId(UUID.randomUUID());
-    assignee.setEmail("assignee@example.com");
-    when(userRepository.findByEmail(assignee.getEmail())).thenReturn(Optional.of(assignee));
-
-    taskDtoND.setCreator(new UserDto(creator.getId(), creator.getEmail(), "ADMIN"));
-    taskDtoND.setAssignee(new UserDto(assignee.getId(), assignee.getEmail(), "USER"));
+  void createTask_ReturnsTaskDto_WhenAdmin() {
+    setupAdminUser("admin@example.com");
+    setupUserRepository();
 
     when(taskMapper.mapToEntity(taskDtoND)).thenReturn(taskND);
     when(taskRepository.save(taskND)).thenReturn(task);
@@ -133,18 +109,19 @@ class TaskServiceTest {
     var result = taskService.create(taskDtoND);
 
     assertEquals(taskDto, result);
-    verify(taskRepository, times(1)).save(taskND);
+    verify(taskRepository).save(taskND);
+    verify(taskMapper).mapToEntity(taskDtoND);
+    verify(taskMapper).mapToDto(task);
   }
 
   @Test
-  void TaskService_CreateTask_ThrowsException_WhenNotAdmin() {
+  void createTask_ThrowsException_WhenNotAdmin() {
     when(authUtil.isAdmin()).thenReturn(false);
-
     assertThrows(OperationDeniedException.class, () -> taskService.create(taskDtoND));
   }
 
   @Test
-  void TaskService_GetAll_ReturnsPagedResponse_WhenAdmin() {
+  void getAll_ReturnsPagedResponse_WhenAdmin() {
     Pageable pageable = PageRequest.of(0, 10);
     List<Task> tasks = List.of(task);
     Page<Task> page = new PageImpl<>(tasks, pageable, tasks.size());
@@ -156,25 +133,18 @@ class TaskServiceTest {
     var result = taskService.getAll(pageable);
 
     assertEquals(1, result.getContentList().size());
-    assertEquals(taskDto, result.getContentList().get(0));
-    assertEquals(0, result.getPage().getPageNo());
-    assertEquals(10, result.getPage().getPageSize());
-    assertEquals(1, result.getPage().getTotalElements());
-    assertEquals(1, result.getPage().getTotalPages());
-    assertTrue(result.getPage().isLast());
-
-    verify(taskRepository, times(1)).findAll(pageable);
+    assertEquals(taskDto, result.getContentList().getFirst());
+    verify(taskRepository).findAll(pageable);
   }
 
   @Test
-  void TaskService_GetAll_ThrowsException_WhenNotAdmin() {
+  void getAll_ThrowsException_WhenNotAdmin() {
     when(authUtil.isAdmin()).thenReturn(false);
-
     assertThrows(OperationDeniedException.class, () -> taskService.getAll(PageRequest.of(0, 10)));
   }
 
   @Test
-  void TaskService_GetById_ReturnsTaskDto_WhenAdmin() {
+  void getById_ReturnsTaskDto_WhenAdmin() {
     when(authUtil.isAdmin()).thenReturn(true);
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
     when(taskMapper.mapToDto(task)).thenReturn(taskDto);
@@ -182,18 +152,14 @@ class TaskServiceTest {
     var result = taskService.getById(TASK_ID);
 
     assertEquals(taskDto, result);
-    verify(taskRepository, times(1)).findById(TASK_ID);
+    verify(taskRepository).findById(TASK_ID);
   }
 
   @Test
-  void TaskService_GetById_ReturnsTaskDto_WhenAssignee() {
+  void getById_ReturnsTaskDto_WhenAssignee() {
     when(authUtil.isAdmin()).thenReturn(false);
     when(authUtil.isSameUser("assignee@example.com")).thenReturn(true);
-
-    User assignee = new User();
-    assignee.setEmail("assignee@example.com");
-
-    task.setAssignee(assignee);
+    task.setAssignee(createTestUser("assignee@example.com"));
 
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
     when(taskMapper.mapToDto(task)).thenReturn(taskDto);
@@ -201,34 +167,23 @@ class TaskServiceTest {
     var result = taskService.getById(TASK_ID);
 
     assertEquals(taskDto, result);
-    verify(taskRepository, times(1)).findById(TASK_ID);
+    verify(taskRepository).findById(TASK_ID);
   }
 
   @Test
-  void TaskService_GetById_ThrowsException_WhenNotAdminOrAssignee() {
+  void getById_ThrowsException_WhenNotAdminOrAssignee() {
     when(authUtil.isAdmin()).thenReturn(false);
-
-    User assignee = new User();
-    assignee.setEmail("assignee@example.com");
-    task.setAssignee(assignee);
-
-    when(authUtil.isSameUser(assignee.getEmail())).thenReturn(false);
+    task.setAssignee(createTestUser("assignee@example.com"));
+    when(authUtil.isSameUser("assignee@example.com")).thenReturn(false);
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
 
     assertThrows(OperationDeniedException.class, () -> taskService.getById(TASK_ID));
   }
 
   @Test
-  void TaskService_Update_ReturnsTaskDto_WhenAdmin() {
+  void update_ReturnsTaskDto_WhenAdmin() {
     when(authUtil.isAdmin()).thenReturn(true);
-
-    User assignee = new User();
-    assignee.setEmail("assignee@example.com");
-    task.setAssignee(assignee);
-
-    UserDto assigneeDto = new UserDto();
-    assigneeDto.setEmail(assignee.getEmail());
-    taskDto.setAssignee(assigneeDto);
+    setupTaskForUpdate();
 
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
     when(taskMapper.createTaskEntityWithoutId(taskDto)).thenReturn(taskND);
@@ -238,11 +193,11 @@ class TaskServiceTest {
     var result = taskService.update(TASK_ID, taskDto);
 
     assertEquals(taskDto, result);
-    verify(taskRepository, times(1)).save(any(Task.class));
+    verify(taskRepository).save(any(Task.class));
   }
 
   @Test
-  void TaskService_Update_ReturnsTaskDto_WhenNotAdmin() {
+  void update_ReturnsTaskDto_WhenNotAdmin() {
     when(authUtil.isAdmin()).thenReturn(false);
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
 
@@ -253,45 +208,40 @@ class TaskServiceTest {
     task.setDescription("Updated description");
 
     when(taskMapper.mapToDto(task)).thenReturn(taskDto);
+    when(taskRepository.save(task)).thenReturn(task);
 
     var result = taskService.update(TASK_ID, taskDto);
 
     assertEquals(taskDto, result);
     assertEquals(TaskStatus.COMPLETED, task.getStatus());
-    verify(taskRepository, times(1)).save(task);
+    assertEquals("Updated description", task.getDescription());
+    verify(taskRepository).save(task);
+    verify(taskMapper).mapToDto(task);
   }
 
   @Test
-  void TaskService_Update_ThrowsException_WhenNotFound() {
+  void update_ThrowsException_WhenNotFound() {
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.empty());
-
     assertThrows(TaskNotFoundException.class, () -> taskService.update(TASK_ID, taskDto));
   }
 
   @Test
-  void TaskService_Delete_ThrowsException_WhenNotAdmin() {
+  void delete_ThrowsException_WhenNotAdmin() {
     when(authUtil.isAdmin()).thenReturn(false);
-
     assertThrows(OperationDeniedException.class, () -> taskService.delete(TASK_ID));
   }
 
   @Test
-  void TaskService_Delete_Success_WhenAdmin() {
+  void delete_Success_WhenAdmin() {
     when(authUtil.isAdmin()).thenReturn(true);
-
     taskService.delete(TASK_ID);
-
-    verify(taskRepository, times(1)).deleteById(TASK_ID);
+    verify(taskRepository).deleteById(TASK_ID);
   }
 
   @Test
-  void TaskService_AddComment_ReturnsTaskDto_WhenAdminOrAssignee() {
+  void addComment_ReturnsTaskDto_WhenAdminOrAssignee() {
     String comment = "New comment";
-
-    User assignee = new User();
-    assignee.setEmail("assignee@example.com");
-    task.setAssignee(assignee);
-    task.setComments(new HashSet<>());
+    setupTaskForComment(comment);
 
     when(authUtil.isAdmin()).thenReturn(true);
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
@@ -302,23 +252,44 @@ class TaskServiceTest {
 
     assertEquals(taskDto, result);
     assertTrue(task.getComments().contains(comment));
-    verify(taskRepository, times(1)).save(task);
+    verify(taskRepository).save(task);
   }
 
   @Test
-  void TaskService_AddComment_ThrowsException_WhenNotAdminOrAssignee() {
+  void addComment_ThrowsException_WhenNotAdminOrAssignee() {
     String comment = "New comment";
     when(authUtil.isAdmin()).thenReturn(false);
+    task.setAssignee(createTestUser("assignee@example.com"));
 
-    User assignee = new User();
-    assignee.setEmail("assignee@example.com");
-    task.setAssignee(assignee);
-
-    when(authUtil.isSameUser(assignee.getEmail())).thenReturn(false);
+    when(authUtil.isSameUser("assignee@example.com")).thenReturn(false);
     when(taskRepository.findById(TASK_ID)).thenReturn(Optional.of(task));
 
     assertThrows(
         OperationDeniedException.class,
         () -> taskService.addComment(TASK_ID, new CommentDto(comment)));
+  }
+
+  private void setupAdminUser(String email) {
+    when(authUtil.isAdmin()).thenReturn(true);
+    User creator = createTestUser(email);
+    when(userRepository.findByEmail(authUtil.getCurrentUserEmail()))
+        .thenReturn(Optional.of(creator));
+  }
+
+  private void setupUserRepository() {
+    User assignee = createTestUser("assignee@example.com");
+    when(userRepository.findByEmail(assignee.getEmail())).thenReturn(Optional.of(assignee));
+  }
+
+  private void setupTaskForUpdate() {
+    User assignee = createTestUser("assignee@example.com");
+    task.setAssignee(assignee);
+    taskDto.setAssignee(new UserDto(assignee.getId(), assignee.getEmail(), "USER"));
+  }
+
+  private void setupTaskForComment(String comment) {
+    task.setAssignee(createTestUser("assignee@example.com"));
+    task.setComments(new HashSet<>());
+    task.getComments().add(comment);
   }
 }
